# weasel-program

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: code-quality.yaml
src/: weasel.py
